--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run docker-compose
-        run: docker-compose -f "docker-compose.yml" up -d
+        run: docker-compose -f "docker-compose-github-actions.yml" up -d
         env:
           POSTGRES_USERNAME: ${{ secrets.POSTGRES_USERNAME }}
           POSTGRES_HOSTNAME: "127.0.0.1"
